# pypi_template

./: LICENSE  README.md  init_setup.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml
