[metadata]
license=MIT
license_file=LICENSE
classifiers = 
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires=
    ensure==1.0.2
python_requires= >=3.8

[options.extras_require]
testing=
    pytest
    mypy
    flake8
    tox
    black

[option.package_data]
YOUR_REPO_NAME=py.typed

[flake8]
max-line-length=160
exclude=__init__.py
